cabal-version:       2.4

name:                eris-box
version:             0.1.0.0
synopsis:            A discord bot that runs code via jupyter.
-- description:
homepage:            https://github.com/Solonarv/eris-box#readme
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Solonarv
maintainer:          nstamm@gmx.de
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Eris
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.12 && < 5
                     , discord-haskell
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable eris-bot
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      exe
  default-language:    Haskell2010
